--- a/src/stylesheets/layout.less
+++ b/src/stylesheets/layout.less
@@ -4,3 +4,14 @@
   padding: 0;
   width: auto;
 }
+
+#neatline, #neatline-map {
+  height: 100vh;
+  width: 100vw;
+}
+
+#static-bubble {
+  height: 100vh;
+  margin-top: 40px;
+  max-height: 70vh;
+}
