Updating design to a dark color scheme.

--- a/src/stylesheets/buttons.less
+++ b/src/stylesheets/buttons.less
@@ -6,3 +6,29 @@
   left: 0;
   margin: 20px 0 0 60px;
 }
+
+.btn-primary {
+  background-color: #1e211e;
+}
+
+.btn-primary {
+  border-color: #435B37;
+}
+
+.btn-primary.active {
+  background-color: #719b5e;
+  border-color: #435B37;
+}
+.btn-primary.active:hover {
+  background-color: #719b5e;
+  border-color: #435B37;
+}
+.btn.active {
+  background-color: #719b5e;
+  border-color: #435B37;
+}
+
+.btn:hover {
+  background-color: #719b5e;
+  border-color: #435B37;
+}
