--- a/src/stylesheets/maps.less
+++ b/src/stylesheets/maps.less
@@ -1,54 +1,9 @@
-/*
-.ortelius, .keere {
 
-  div#OpenLayers_Layer_XYZ_46 {
+
+.ortelius, .kaerio {
+
+  .olTileImage[crossorigin] {
     display: none;
   }
 
-}
-*/
-
-#waypoints a.title {
-  font-size: 14px;
-}
-
-[data-id="127"]{
-  color: black;
-  font-size: 20px;
-  pointer-events: none;
-}
-
-#simile .timeline-ether-bg {
-  background: #f2f2f2;
-}
-
-#simile .timeline-event-label {
-  font-size: 14px;
-}
-
-#neatline.Waypoints.Simile #waypoints {
-  width: 15%;
-  max-width: 15%;
-}
-
-img#OpenLayers_Control_MaximizeDiv_innerImage.olAlphaImg {
-  display: none;
-}
-
-#neatline.Waypoints.Simile #simile {
-  width: 85%;
-}
-
-#neatline #static-bubble.bound {
-  overflow-y: scroll;
-  max-height: 400px;
-}
-
-#legend {
-  position: fixed;
-  top: 0;
-  left: 0;
-  margin: 350px 0 0 60px;
-  height: auto;
-  width: 140px;
 }
