--- a/src/stylesheets/layout.less
+++ b/src/stylesheets/layout.less
@@ -1,15 +1,49 @@
+@import url(https://fonts.googleapis.com/css?family=Droid+Sans);
+@import url(https://fonts.googleapis.com/css?family=Droid+Serif);
 
+body {
+  font-family: "Droid Sans";
+}
+
+a, a:visited {
+  color: #f2f2f2;
+}
+
+a:hover {
+  color: #fff;
+}
 
 .container {
   padding: 0;
   width: auto;
 }
 
-#neatline, #neatline-map {
-  height: 100vh;
-  width: 100vw;
+#waypoints {
+  background:#1e211e;
+}
+
+#waypoints a {
+  color: white;
+}
+
+#waypoints a.title.highlighted {
+  background: #719b5e;
+}
+#waypoints a.title.selected {
+  background: #435B37;
 }
 
 #static-bubble {
-  top: 80px;
+  background: #1e211e;
+  font-family: "Droid Serif", sans-serif;
+  color: white;
+  font-size: 9pt;
+  top: 60px;
+  left: 60px;
+  line-height: 1.6;
 }
+
+.close {
+  color: #f2f2f2;
+}
+
