Hide basemap when one of the historic maps are selected.

--- a/src/stylesheets/maps.less
+++ b/src/stylesheets/maps.less
@@ -1,9 +1,18 @@
 
 
-.ortelius, .kaerio {
-
-  .olTileImage[crossorigin] {
+.ortelius, .keere {
+  img[src*="tiles.mapbox.com"] {
     display: none;
   }
 
+}
+
+#legend {
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin: 350px 0 0 60px;
+  height: auto;
+  width: 140px;
+  display: none;
 }
