--- a/src/stylesheets/layout.less
+++ b/src/stylesheets/layout.less
@@ -1,6 +1,15 @@
 @import url(https://fonts.googleapis.com/css?family=Droid+Sans);
 @import url(https://fonts.googleapis.com/css?family=Droid+Serif);
 
+/**
+1. Body, links, container
+2. Waypoints
+3. Narrative
+4. Legend
+*/
+
+/*= Body, links, container
+--------------------------------------------*/
 body {
   font-family: "Droid Sans";
 }
@@ -18,6 +27,14 @@ a:hover {
   width: auto;
 }
 
+/*= Waypoints
+--------------------------------------------*/
+#neatline #waypoints {
+  top: 0;
+  right: 0;
+  max-height: 100%;
+}
+
 #waypoints {
   background:#1e211e;
 }
@@ -33,6 +50,8 @@ a:hover {
   background: #435B37;
 }
 
+/*= Narrative
+--------------------------------------------*/
 #static-bubble {
   background: #1e211e;
   font-family: "Droid Serif", sans-serif;
@@ -47,3 +66,17 @@ a:hover {
   color: #f2f2f2;
 }
 
+img#OpenLayers_Control_MaximizeDiv_innerImage.olAlphaImg {
+  display: none;
+}
+
+/*= Legend
+--------------------------------------------*/
+#legend {
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin: 480px 0 0 60px;
+  height: auto;
+  width: 140px;
+}
